# eapctf

./: README.md  benchmark_contract.yaml  pyproject.toml
docs/: ctf-contract-boundaries.md  model-family-expansion-plan.md  model-selection-and-custom-models.md  promoted-family-benchmark-plan.md  rebuild-notes.md  rebuild-roadmap.md  uncertainty-fix-plan.md
eapctf/: __init__.py
eapctf/ctf/: __init__.py  baselines.py  leaderboard.py  metrics.py  model_registry.py  uncertainty.py
reference/: benchmark-ipca-pf.py  check_ipca_parity.py  ipca_uncertainty_overlay_demo.py  run_archived_ipca_joint_exposure_instability.py  run_archived_ipca_joint_residual_vol.py  run_model_family_smoke.py  run_promoted_family_benchmark.py  run_rolling_ols_residual_vol.py
tests/: test_joint_ipca_model.py
