[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eapctf"
version = "0.7.0a0"
description = "Empirical asset pricing toolkit under rebuild"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "lightgbm>=4.6",
  "xgboost>=3.2",
]

[project.urls]
Repository = "https://github.com/NanyeonK/eapctf"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
